# hl_labelling

./: CMakeLists.txt  package.xml  wks.yml
apps/: gtk_labelling_tool.cpp  labelling_tool.cpp  rhoban_dynamic_camera_labelling_tool.cpp
include/hl_labelling/: activable_pos_history.h  label_drawer.h  labelling_manager.h  labelling_window.h  utils.h  video_labelling_manager.h
include/hl_labelling/gtkmm/: labelling_bar.h  labelling_chooser.h  labelling_display_widget.h  labelling_widget.h
script/: diff-plotter.py
src/hl_labelling/: activable_pos_history.cpp  label_drawer.cpp  labelling_manager.cpp  labelling_window.cpp  labelling_window.h  sources.cmake  utils.cpp  video_labelling_manager.cpp
src/hl_labelling/gtkmm/: labelling_bar.cpp  labelling_chooser.cpp  labelling_display_widget.cpp  labelling_widget.cpp  sources.cmake
