<?xml version="1.0"?>
<package>
  <name>hl_labelling</name>
  <version>0.0.1</version>
  <description>Experimental package to label RoboCup Humanoid League data</description>

  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>

  <license>LGPLv3</license>

  <author email="lhofer@labri.fr">Ludovic Hofer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hl_monitoring</build_depend>
  <build_depend>robot_model</build_depend>

  <run_depend>hl_monitoring</run_depend>
  <run_depend>robot_model</run_depend>
</package>
